[package]
name = "lin_auth"
version = "0.1.0"
authors = ["samgans <antonzhiltsov2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
clap = "2.33.3"
rand = "0.8.3"
reqwest = {version = "0.11.1", features = ["blocking", "json"]}
serde_json = "1.0.59"